Redirect to LinkedIn
Redirect to LinkedIn.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Ryan Mok</title>
+	<meta http-equiv="refresh" content="0; url=http://linkedin.com/in/ryanmok/" />
+</head>
 <body>
-<h1>Ryan Mok</h1>
-<p>Site Under Development</p>
+	<h1>Ryan Mok</h1>
+	<p>Site Under Development</p>
 </body>
 </html>
