--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#46ffff">
     <meta name="theme-color" content="#46ffff">
 
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+
     <title>Ryan Mok</title>
 
     <!-- Bootstrap Core CSS -->
@@ -99,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Ryan <span class="light">Mok</span></h1>
+                        <h1 class="brand-heading">Ryan <span class="light" style="letter-spacing: 1px;">Mok</span></h1>
                         <p class="intro-text">Systems Design Engineering<br>University of Waterloo</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -115,7 +117,8 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                 <h2><i class="fa fa-comments"></i> About Me</h2>
-                <p>Software: Python, Java, JavaScript, Ruby on Rails, C++, Perl, HTML, CSS<br>
+                <p>Software: Swift, JavaScript, Node.js, Ruby on Rails, Python, Java, C++, Perl, HTML, CSS, Firebase<br>
+                Design: Personas, user interviews, user journey maps, empathy maps, usability testing, design principles<br>
                 Hardware: Arduino, motor controllers, digital and analog sensors, circuit design<br>
                 Communication: Customer-facing interactions, cross-departmental collaboration, bilingual (English & Chinese)</p>
             </div>
@@ -131,7 +134,23 @@
                      <div class="row">
 		                <div class="col-lg-12">
 		                    <ul class="timeline">
-		                        <li>
+		                        <li class="timeline-inverted">
+                                    <div class="timeline-image">
+                                        <a href="#Manulife" class="portfolio-link" data-toggle="modal">
+                                            <img class="img-circle img-responsive" src="img/logos/Manulife.png" alt="Manulife">
+                                        </a>
+                                    </div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3>Manulife</h3>
+                                            <h4>Solutions Prototype Developer - RED Lab (Communitech)</h4>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p>Sep 2017 - Present</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
 		                            <div class="timeline-image">
 		                                <a href="#AMD" class="portfolio-link" data-toggle="modal">
 		                                	<img class="img-circle img-responsive" src="img/logos/AMD.png" alt="AMD">
@@ -187,8 +206,8 @@
 		                            </div>
 		                            <div class="timeline-panel">
 		                                <div class="timeline-heading">
-		                                    <h3>HKCSS ILRC</h3>
-		                                    <h4>Volunteer</h4>
+		                                    <h3>The Hong Kong Council of Social Service</h3>
+		                                    <h4>Volunteer - WebOrganic</h4>
 		                                </div>
 		                                <div class="timeline-body">
 		                                    <p>Aug 2014 - Dec 2015</p>
@@ -271,6 +290,8 @@
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1 awards">
                     <h2><i class="fa fa-trophy"></i> Awards</h2>
+                    <h3>First in Class Engineering Scholarship</h3>
+                    <p style="padding-bottom: 45px">University of Waterloo</p>
                     <h3>Dean's Honours List</h3>
                     <p style="padding-bottom: 45px">University of Waterloo</p>
                     <h3>President's Scholarship of Distinction</h3>
@@ -291,9 +312,6 @@
                     <li>
                         <a href="https://linkedin.com/in/ryanmok" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
                     </li>
-                    <li>
-                        <a href="https://github.com/ryan-mok" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -307,6 +325,26 @@
     </footer>
 
     <!-- Job Descriptions -->
+     <div class="portfolio-modal modal fade" id="Manulife" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container" style="width: 85%">
+                    <div class="modal-body">
+                        <h2>Solutions Prototype Developer - RED Lab (Communitech)</h2>
+                        <h3>Manulife</h3>
+                        <h4>Sep 2017 - Present</h4>
+                        <p>Designed and programmed new ways for insurance customers to interact with technology using Swift, Node.js, Firebase and more</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
      <div class="portfolio-modal modal fade" id="AMD" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -378,8 +416,8 @@
                 </div>
                 <div class="container" style="width: 85%">
                     <div class="modal-body">
-                        <h2>Volunteer</h2>
-                        <h3>HKCSS Internet Learning Resource Centre</h3>
+                        <h2>Volunteer - WebOrganic</h2>
+                        <h3>The Hong Kong Council of Social Service</h3>
                         <h4>Aug 2014 - Dec 2015</h4>
                         <p>Provided technical help at the Hong Kong Council of Social Service Internet Learning Resource Centre (WebOrganic) to disadvantaged families through IT support and educating clients about computer systems</p>
                     </div>
@@ -447,7 +485,7 @@
 	                        <h2>University of Waterloo</h2>
 	                        <h3>Systems Design Engineering</h3>
 	                        <h4>Sep 2016 - Present</h4>
-	                        <p>Related courses: Programming in C++, Digital Circuits, Graphics with SolidWorks, Human Factors in Design</p>
+	                        <p>Relevant courses: Programming in C++, Digital Circuits, Graphics with SolidWorks, Human Factors in Design</p>
 	                    </div>
 	                </div>
 	            </div>
@@ -508,9 +546,13 @@
 	                </div>
 	                <div class="container" style="width: 85%">
 	                    <div class="modal-body awards">
-	                        <h3>Dean's Honours List</h3>
+	                        <h3>First in Class Engineering Scholarship</h3>
+                            <p>University of Waterloo</p>
+                            <p>Aug 2017</p>
+                            <p class="details">Scholarships are presented to the top student in each class based on performance in terms 1B to 4A.</p>
+                            <h3>Dean's Honours List</h3>
 		                    <p>University of Waterloo</p>
-		                    <p>Dec 2016</p>
+		                    <p>Aug 2017 & Dec 2016</p>
 		                    <p class="details">To achieve this standing for a particular term, students must be unconditionally promoted at the end of the term, and have their term average minus their percentile rank from the top for that academic term greater than or equal to 80. Students not in the top 10% of their class are normally not eligible.</p>
 		                    <h3>President's Scholarship of Distinction</h3>
 		                    <p>University of Waterloo</p>
@@ -523,7 +565,7 @@
 		                    <h3>Communitas Award</h3>
 		                    <p>Chinese International School</p>
                             <p>May 2016</p>
-		                    <p class="details">The Communitas Award is given to students who have made significant contributions to the betterment of the school community</p>
+		                    <p class="details">The Communitas Award is given to students who have made significant contributions to the betterment of the school community.</p>
 		                    <h3>CISPTA IT Award In Memory of Christopher Berrisford</h3>
 		                    <p>Chinese International School</p>
 		                    <p>Jun 2014</p>
