--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-user"></i> Ryan <span class="light">Mok</span>
+                    <i class="fa fa-user"></i> Ryan <span class="light" style="font-size: 103%"">Mok</span>
                 </a>
             </div>
 
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Ryan <span class="light" style="letter-spacing: 1px;">Mok</span></h1>
+                        <h1 class="brand-heading">Ryan <span class="light" style="letter-spacing: 1px; font-size: 103%">Mok</span></h1>
                         <p class="intro-text">Systems Design Engineering<br>University of Waterloo</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
