--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
+            <p><span class="light">This site is best viewed in desktop browsers<br>Mobile optimisations are coming soon</span></p><br>
+            <p><span class="light">All photos taken by Ryan Mok</span></p><br>
             <p><span class="light">Copyright &copy; Ryan Mok 2017</span></p>
         </div>
     </footer>
