--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,7 +59,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-user"></i> Ryan <span class="light" style="font-size: 103%"">Mok</span>
+                    <i class="fa fa-user"></i> Ryan <span class="light" style="font-size: 103%">Mok</span>
                 </a>
             </div>
 
