--- a/index.html
+++ b/index.html
@@ -235,6 +235,13 @@
                     <h2><i class="fa fa-lightbulb-o"></i> Projects</h2>
                 </div>
                 <div class="row">
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#uwAPI" class="portfolio-link" data-toggle="modal">
+                                <img src="img/projects/uwAPI.png" class="img-responsive portfolio-image" alt="">
+                            </a>
+                            <h3>uwAPI</h3>
+                            <p>Personal Project</p>
+                        </div>
 	                <div class="col-md-4 col-sm-6 portfolio-item">
 	                    <a href="#Wanderloo" class="portfolio-link" data-toggle="modal">
 	                        <img src="img/projects/Wanderloo.png" class="img-responsive portfolio-image" alt="">
@@ -248,10 +255,6 @@
 	                    </a>
 	                    <h3>CIS Robotics Team</h3>
 	                    <p>Chinese International School</p>
-	                </div>
-	                <div class="col-md-4 col-sm-6 portfolio-item">
-	                    <img src="img/projects/More.png" class="img-responsive" alt="More projects on the way!">
-	                    <h3>Updating soon</h3>
 	                </div>
 	            </div>
             </div>
@@ -429,6 +432,27 @@
     </div>
 
      <!-- Project Descriptions -->
+     <div class="portfolio-modal modal fade" id="uwAPI" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container" style="width: 85%">
+                    <div class="modal-body">
+                        <h2>uwAPI - Actions on Google</h2>
+                        <h3>Personal Project</h3>
+                        <h4>Dec 2017</h4>
+                        <p>Developed an Actions on Google app with Dialogflow and Heroku to interact with the University of Waterloo Open Data API</p>
+                        <p>GitHub: <a href="https://github.com/ryan-mok/uwAPI">https://github.com/ryan-mok/uwAPI</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
      <div class="portfolio-modal modal fade" id="Wanderloo" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
