--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                 <img src="img/projects/uwAPI.png" class="img-responsive portfolio-image" alt="">
                             </a>
                             <h3>uwAPI</h3>
-                            <p>Personal Project</p>
+                            <p>Side Project</p>
                         </div>
 	                <div class="col-md-4 col-sm-6 portfolio-item">
 	                    <a href="#Wanderloo" class="portfolio-link" data-toggle="modal">
@@ -444,7 +444,7 @@
                 <div class="container" style="width: 85%">
                     <div class="modal-body">
                         <h2>uwAPI - Actions on Google</h2>
-                        <h3>Personal Project</h3>
+                        <h3>Side Project</h3>
                         <h4>Dec 2017</h4>
                         <p>Developed an Actions on Google app with Dialogflow and Heroku to interact with the University of Waterloo Open Data API</p>
                         <p>GitHub: <a href="https://github.com/ryan-mok/uwAPI">https://github.com/ryan-mok/uwAPI</a></p>
