Logo Change and Updates
Removed logos and added updates to content

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                 <h2><i class="fa fa-comments"></i> About Me</h2>
-                <p>Software: Swift, JavaScript, Node.js, Ruby on Rails, Python, Java, C++, Perl, HTML, CSS, Firebase<br>
+                <p>Software: Node.js, Express, Python, Swift, Java, C++, Perl, Alexa Skills Kit, Dialogflow, Firebase, Bootstrap<br>
                 Design: Personas, user interviews, user journey maps, empathy maps, usability testing, design principles<br>
                 Hardware: Arduino, motor controllers, digital and analog sensors, circuit design<br>
                 Communication: Customer-facing interactions, cross-departmental collaboration, bilingual (English & Chinese)</p>
@@ -344,7 +344,7 @@
                         <h2>Solutions Prototype Developer - RED Lab (Communitech)</h2>
                         <h3>Manulife</h3>
                         <h4>Sep 2017 - Present</h4>
-                        <p>Designed and programmed new ways for insurance customers to interact with technology using Swift, Node.js, Firebase and more</p>
+                        <p>Designed and developed new ways for insurance customers to interact with technology using the Alexa Skills Kit, Node.js, Express, AWS, Bootstrap, Swift and more</p>
                     </div>
                 </div>
             </div>
