--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <div class="modal-body">
                         <h2>Solutions Prototype Developer - RED Lab (Communitech)</h2>
                         <h3>Manulife</h3>
-                        <h4>Sep 2017 - Present</h4>
+                        <h4>Sep 2017 - Dec 2017</h4>
                         <p>Designed and developed new ways for insurance customers to interact with technology using the Alexa Skills Kit, Node.js, Express, AWS, Bootstrap, Swift and more</p>
                     </div>
                 </div>
