--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                             <h4>Solutions Prototype Developer - RED Lab (Communitech)</h4>
                                         </div>
                                         <div class="timeline-body">
-                                            <p>Sep 2017 - Present</p>
+                                            <p>Sep 2017 - Dec 2017</p>
                                         </div>
                                     </div>
                                 </li>
