Add name styling

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="container">
 				<div class="row">
 					<div class="col s12">
-						<h1 class="brand-heading">Ryan <span class="light" style="letter-spacing: 1px; font-size: 103%">Mok</span></h1>
-						<p class="intro-text">Systems Design Engineering<br>University of Waterloo</p>
+						<h1>R<span class="small-caps">yan</span> <span class="light last-name">M<span class="small-caps">ok</span></span></h1>
+						<h5 class="intro-text">Systems Design Engineering, University of Waterloo</h5>
 					</div>
 				</div>
 			</div>
