Fix styling, add empty handling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="js/ApiAi.js"></script>
-	<script src="js/demoFunctions.js"></script>
+	<script src="js/functions.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -17,8 +17,8 @@
 		<div class="container">
 				<div class="row">
 					<div class="col s12">
-						<h1>R<span class="small-caps">yan</span> <span class="light last-name">M<span class="small-caps">ok</span></span></h1>
-						<h5 class="intro-text">Systems Design Engineering, University of Waterloo</h5>
+						<h2>R<span class="small-caps">yan</span> <span class="light last-name">M<span class="small-caps">ok</span></span></h2>
+						<h5>Systems Design Engineering, University of Waterloo</h5>
 					</div>
 				</div>
 			</div>
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 			<div class="input-field">
-					<input placeholder="Type a message..." id="q" type="text" >
+				<input placeholder="Type a message..." id="q" type="text">
 			</div>
 		</div>
 	</div>
