--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan Mok</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <script src="js/ApiAi.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Ryan Mok</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+	<script src="js/ApiAi.js"></script>
 	<script src="js/functions.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+	 crossorigin="anonymous">
 </head>
+
 <body>
 	<div id="header">
 		<div class="container">
-				<div class="row">
-					<div class="col s12">
-						<h2>R<span class="small-caps">yan</span> <span class="light last-name">M<span class="small-caps">ok</span></span></h2>
-						<h5>Systems Design Engineering, University of Waterloo</h5>
+			<div class="row">
+				<div class="col s10">
+					<h2>R<span class="small-caps">yan</span> <span class="light last-name">M<span class="small-caps">ok</span></span></h2>
+					<h5>Systems Design Engineering, University of Waterloo</h5>
+				</div>
+				<div class="col s2 right-align">
+					<div class="fixed-action-btn horizontal">
+						<a class="btn-floating btn-large cyan accent-4">
+							<i class="fas fa-link"></i>
+						</a>
+						<ul>
+							<li><a id="linkedin" href="https://linkedin.com/in/ryanmok" class="btn-floating"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a id="github" href="https://github.com/ryan-mok" class="btn-floating"><i class="fab fa-github"></i></a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
+		</div>
 	</div>
 	<div id="chatbot">
 		<div class="container">
@@ -38,4 +53,5 @@
 	</div>
 	<script defer src="js/layout.js"></script>
 </body>
+
 </html>
