--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html lang="en">
 
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100328481-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+		gtag('config', 'UA-100328481-1');
+	</script>
+
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="robots" content="noindex,nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ryan Mok</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#84ffff">
+    <meta name="theme-color" content="#84ffff">
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
@@ -14,6 +33,8 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
 	 crossorigin="anonymous">
+
+	 <title>Ryan Mok</title>
 </head>
 
 <body>
@@ -21,7 +42,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s10">
-					<h2>R<span class="small-caps">yan</span> <span class="light last-name">M<span class="small-caps">ok</span></span></h2>
+					<h2>R<span class="small-caps">yan</span> M<span class="small-caps">ok</span></h2>
 					<h5>Systems Design Engineering, University of Waterloo</h5>
 				</div>
 				<div class="col s2 right-align">
@@ -30,8 +51,8 @@
 							<i class="fas fa-link"></i>
 						</a>
 						<ul>
-							<li><a id="linkedin" href="https://linkedin.com/in/ryanmok" class="btn-floating"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a id="github" href="https://github.com/ryan-mok" class="btn-floating"><i class="fab fa-github"></i></a></li>
+							<li><a id="linkedin" href="https://linkedin.com/in/ryanmok" target="_blank" class="btn-floating"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a id="github" href="https://github.com/ryan-mok" target="_blank" class="btn-floating"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
