--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#84ffff">
     <meta name="theme-color" content="#84ffff">
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="js/ApiAi.js"></script>
 	<script src="js/functions.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
 	 <title>Ryan Mok</title>
@@ -41,19 +41,14 @@
 	<div id="header">
 		<div class="container">
 			<div class="row">
-				<div class="col s10">
+				<div class="col s9">
 					<h2>R<span class="small-caps">yan</span> M<span class="small-caps">ok</span></h2>
 					<h5>Systems Design Engineering, University of Waterloo</h5>
 				</div>
-				<div class="col s2 right-align">
-					<div class="fixed-action-btn horizontal">
-						<a class="btn-floating btn-large cyan accent-4">
-							<i class="fas fa-link"></i>
-						</a>
-						<ul>
-							<li><a id="linkedin" href="https://linkedin.com/in/ryanmok" target="_blank" class="btn-floating"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a id="github" href="https://github.com/ryan-mok" target="_blank" class="btn-floating"><i class="fab fa-github"></i></a></li>
-						</ul>
+				<div class="col s3 right-align">
+					<div class="link-buttons horizontal">
+							<a id="linkedin" href="https://linkedin.com/in/ryanmok" target="_blank" class="btn-floating btn-large"><i class="fab fa-linkedin-in"></i></a>
+							<a id="github" href="https://github.com/ryan-mok" target="_blank" class="btn-floating btn-large"><i class="fab fa-github"></i></a>
 					</div>
 				</div>
 			</div>
@@ -67,8 +62,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="input-field">
-				<input placeholder="Type a message..." id="q" type="text">
+			<div class="row input-field">
+				<div class="col s10 m11">
+					<input placeholder="Type a message..." id="q" type="text" autocomplete="off">
+				</div>
+				<div class="col s2 m1 right-align">
+					<a id="send" target="_blank" class="btn-floating cyan accent-1"><i class="material-icons cyan accent-3">send</i></a>
+				</div>
 			</div>
 		</div>
 	</div>
