--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#84ffff">
-    <meta name="theme-color" content="#84ffff">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3b3838">
+    <meta name="theme-color" content="#3b3838">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
