Set focus to input field

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			</div>
 			<div class="row input-field">
 				<div class="col s10 m11">
-					<input placeholder="Type a message..." id="q" type="text" autocomplete="off">
+					<input placeholder="Type a message..." id="q" type="text" autocomplete="off" autofocus>
 				</div>
 				<div class="col s2 m1 right-align">
 					<a id="send" target="_blank" class="btn-floating cyan accent-1"><i class="material-icons cyan accent-3">send</i></a>
