--- a/index.html
+++ b/index.html
@@ -1,76 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100328481-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
+		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 		gtag('config', 'UA-100328481-1');
 	</script>
 
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Ryan Mok. Software Engineering Intern at Extend. Systems Design Engineering student at the University of Waterloo.">
 
-	<meta name="description" content="Hi there! I'm a chatbot that can answer questions about Ryan, a Systems Design Engineering student at the University of Waterloo.">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3b3838">
-	<meta name="theme-color" content="#3b3838">
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script src="js/ApiAi.js"></script>
-	<script src="js/functions.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
 	<title>Ryan Mok</title>
 </head>
-
 <body>
-	<div id="header">
-		<div class="container">
-			<div class="row">
-				<div class="col s9">
-					<h2>R<span class="small-caps">yan</span> M<span class="small-caps">ok</span></h2>
-					<h5>Systems Design Engineering, University of Waterloo</h5>
-				</div>
-				<div class="col s3 right-align">
-					<div class="link-buttons horizontal">
-							<a id="linkedin" href="https://linkedin.com/in/ryanmok" target="_blank" class="btn-floating btn-large"><i class="fab fa-linkedin-in"></i></a>
-							<a id="github" href="https://github.com/ryan-mok" target="_blank" class="btn-floating btn-large"><i class="fab fa-github"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
+	<div class="centred">
+		<h1>Hi there! 👋</h1>
+		<h2>Please excuse the construction, you caught me in the middle of renovating my website.</h2>
+		<p>In the meantime, please feel free to reach out to me on <a href="https://linkedin.com/in/ryanmok">LinkedIn</a>.</p>
+		<p>I look forward to welcoming you back here again once I'm ready to unveil the updates!</p>
+		<p>- Ryan</p>
 	</div>
-	<div id="chatbot">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<div id="result">
-					</div>
-				</div>
-			</div>
-			<div class="row input-field">
-				<div class="col s10 m11">
-					<input placeholder="Type a message..." id="q" type="text" autocomplete="off" autofocus>
-				</div>
-				<div class="col s2 m1 right-align">
-					<a id="send" target="_blank" class="btn-floating cyan accent-1"><i class="material-icons cyan accent-3">send</i></a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script defer src="js/layout.js"></script>
 </body>
-
 </html>
