--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 	<meta name="description" content="Ryan Mok. Software Engineering Intern at Extend. Systems Design Engineering student at the University of Waterloo.">
 
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
