--- a/index.html
+++ b/index.html
@@ -1,30 +1,90 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
+	<!-- Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100328481-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'UA-100328481-1');
 	</script>
 
+	<!-- Bootstrap Setup -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 	<meta name="description" content="Ryan Mok. Software Engineering Intern at Extend. Systems Design Engineering student at the University of Waterloo.">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	
-	<link rel="stylesheet" href="css/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+	<link rel="stylesheet" href="main.css">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>Ryan Mok</title>
 </head>
-<body>
-	<div class="centred">
-		<h1>Hi there! 👋</h1>
-		<h2>Please excuse the construction, you caught me in the middle of renovating my website.</h2>
-		<p>In the meantime, please feel free to reach out to me on <a href="https://linkedin.com/in/ryanmok">LinkedIn</a>.</p>
-		<p>I look forward to welcoming you back here again once I'm ready to unveil the updates!</p>
-		<p>- Ryan</p>
+
+<body data-spy="scroll" data-target="#navbar">
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="#home">ryan mok</a>
+			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navigation">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="#experience">experience</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#about">about</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#contact">contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<div class="content">
+		<section id="home" class="scroll-to">
+			<div class="container h-100 text-center">
+				<div class="row align-items-center h-75">
+					<div class="col" style="padding-top: 15vh;">
+						<h1>hello, i'm ryan</h1>
+						<h2>I like developing software. I like managing products.</h2>
+						<h2>I love working on meaningful software products.</h2>
+					</div>
+				</div>
+				<div class="row align-items-end h-25">
+					<div class="col">
+						<a id="scroll-down" class="fa fa-chevron-down" href="#experience"></a>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section id="experience" class="scroll-to">
+
+		</section>
+
+		<section id="about" class="scroll-to">
+
+		</section>
+
+		<section id="contact" class="scroll-to">
+			
+		</section>
 	</div>
+
+	<!-- Bootstrap Setup -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+	<script src="main.js"></script>
 </body>
+
 </html>
