--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
 	<meta name="description" content="Ryan Mok. Software Engineering Intern at Extend. Systems Design Engineering student at the University of Waterloo.">
 
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/home.css">
+	<link rel="stylesheet" href="styles/content.css">
+	
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>Ryan Mok</title>
 </head>
@@ -35,13 +37,13 @@
 			<div class="collapse navbar-collapse" id="navigation">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#experience">experience</a>
+						<a class="nav-link" href="#experience">what i've done</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#about">about</a>
+						<a class="nav-link" href="#about">more about me</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#contact">contact</a>
+						<a class="nav-link" href="#contact">let's chat</a>
 					</li>
 				</ul>
 			</div>
@@ -51,31 +53,69 @@
 	<div class="content">
 		<section id="home" class="scroll-to">
 			<div class="container h-100 text-center">
-				<div class="row align-items-center h-75">
-					<div class="col" style="padding-top: 15vh;">
+				<div class="row align-items-center h-95">
+					<div class="col">
 						<h1>hello, i'm ryan</h1>
-						<h2>I like developing software. I like managing products.</h2>
-						<h2>I love working on meaningful software products.</h2>
+						<h2 class="pt-5">Likes 👍: developing software, managing products.</h2>
+						<h2 class="pt-2">Loves ❤️: making amazing software products, together.</h2>
 					</div>
 				</div>
-				<div class="row align-items-end h-25">
+				<div class="row align-items-end h-5">
 					<div class="col">
-						<a id="scroll-down" class="fa fa-chevron-down" href="#experience"></a>
+						<a id="scroll-down" href="#experience"></a>
 					</div>
 				</div>
 			</div>
 		</section>
 		
 		<section id="experience" class="scroll-to">
-
+			<div class="container h-100">
+				<div class="row align-items-end text-center h-25">
+					<div class="col">
+						<h3>what i've done</h3>
+					</div>
+				</div>
+				<div class="row align-items-start pt-5 h-75">
+					<div class="row align-items-center ml-0 mr-0">
+						<div class="col-2 text-right icon">
+							💳
+						</div>
+						<div class="col-10">
+							<p class="mb-0">Developed software to send, receive, manage and use virtually distributed corporate credit cards.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<section id="about" class="scroll-to">
-
+			<div class="container text-center h-100">
+				<div class="row align-items-end h-25">
+					<div class="col">
+						<h3>more about me</h3>
+					</div>
+				</div>
+				<div class="row align-items-start pt-5 h-75">
+					<div class="col">
+						<p>fun facts</p>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<section id="contact" class="scroll-to">
-			
+			<div class="container text-center h-100">
+				<div class="row align-items-end h-25">
+					<div class="col">
+						<h3>let's chat</h3>
+					</div>
+				</div>
+				<div class="row align-items-start pt-5 h-75">
+					<div class="col">
+						<p>how to find me</p>
+					</div>
+				</div>
+			</div>
 		</section>
 	</div>
 
