Add content, fix js

--- a/index.html
+++ b/index.html
@@ -70,18 +70,65 @@
 		
 		<section id="experience" class="scroll-to">
 			<div class="container h-100">
-				<div class="row align-items-end text-center h-25">
+				<div class="row align-items-center text-center h-20">
 					<div class="col">
 						<h3>what i've done</h3>
 					</div>
 				</div>
-				<div class="row align-items-start pt-5 h-75">
-					<div class="row align-items-center ml-0 mr-0">
+				<div class="row align-items-start h-70">
+					<div class="row align-items-center pl-5 pr-3 w-100">
 						<div class="col-2 text-right icon">
 							💳
 						</div>
 						<div class="col-10">
-							<p class="mb-0">Developed software to send, receive, manage and use virtually distributed corporate credit cards.</p>
+							<p class="mb-0">Developed backend software at Extend to send and receive virtually distributed corporate credit cards.</p>
+						</div>
+					</div>
+					<div class="row align-items-center pl-5 pr-3 w-100">
+						<div class="col-2 text-right icon">
+							📈
+						</div>
+						<div class="col-10">
+							<p class="mb-0">Managed a feature to bring Splunk Mobile to devices running mobile device management software.</p>
+						</div>
+					</div>
+					<div class="row align-items-center pl-5 pr-3 w-100">
+						<div class="col-2 text-right icon">
+							🗺
+						</div>
+						<div class="col-10">
+							<p class="mb-0">Enhanced the usability and efficiency of deploying Apple Maps data around the world as a developer.</p>
+						</div>
+					</div>
+					<div class="row align-items-center pl-5 pr-3 w-100">
+						<div class="col-2 text-right icon">
+							📦
+						</div>
+						<div class="col-10">
+							<p class="mb-0">Developed on an Agile XP team at Nulogy for a contract packaging and manufacturing platform.</p>
+						</div>
+					</div>
+					<div class="row align-items-center pl-5 pr-3 w-100">
+						<div class="col-2 text-right icon">
+							🔈
+						</div>
+						<div class="col-10">
+							<p class="mb-0">Prototyped and developed solutions to bring Manulife insurance benefits to Alexa.</p>
+						</div>
+					</div>
+					<div class="row align-items-center pl-5 pr-3 w-100">
+						<div class="col-2 text-right icon">
+							🎮
+						</div>
+						<div class="col-10">
+							<p class="mb-0">Automated video gaming and benchmarking procedures to analyze AMD graphics cards.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row align-items-start h-10">
+					<div class="row align-items-center text-center pl-5 pr-3 w-100">
+						<div class="col-12 text-center">
+							<p class="mb-0">For more details than just an emoji and a sentence: my resume and LinkedIn.</p>
 						</div>
 					</div>
 				</div>
@@ -97,7 +144,7 @@
 				</div>
 				<div class="row align-items-start pt-5 h-75">
 					<div class="col">
-						<p>fun facts</p>
+						<p>I'm currently in Waterloo, but I spent much of the last few years in the Bay Area and Toronto.</p>
 					</div>
 				</div>
 			</div>
