Add content, start contact page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="styles/content.css">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>Ryan Mok</title>
 </head>
@@ -43,7 +44,7 @@
 						<a class="nav-link" href="#about">more about me</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#contact">let's chat</a>
+						<a class="nav-link" href="#contact">let's connect</a>
 					</li>
 				</ul>
 			</div>
@@ -70,96 +71,88 @@
 		
 		<section id="experience" class="scroll-to">
 			<div class="container h-100">
-				<div class="row align-items-center text-center h-20">
+				<div class="row align-items-center text-center h-100">
 					<div class="col">
-						<h3>what i've done</h3>
-					</div>
-				</div>
-				<div class="row align-items-start h-70">
-					<div class="row align-items-center pl-5 pr-3 w-100">
-						<div class="col-2 text-right icon">
-							💳
-						</div>
-						<div class="col-10">
-							<p class="mb-0">Developed backend software at Extend to send and receive virtually distributed corporate credit cards.</p>
-						</div>
-					</div>
-					<div class="row align-items-center pl-5 pr-3 w-100">
-						<div class="col-2 text-right icon">
-							📈
-						</div>
-						<div class="col-10">
-							<p class="mb-0">Managed a feature to bring Splunk Mobile to devices running mobile device management software.</p>
-						</div>
-					</div>
-					<div class="row align-items-center pl-5 pr-3 w-100">
-						<div class="col-2 text-right icon">
-							🗺
-						</div>
-						<div class="col-10">
-							<p class="mb-0">Enhanced the usability and efficiency of deploying Apple Maps data around the world as a developer.</p>
-						</div>
-					</div>
-					<div class="row align-items-center pl-5 pr-3 w-100">
-						<div class="col-2 text-right icon">
-							📦
-						</div>
-						<div class="col-10">
-							<p class="mb-0">Developed on an Agile XP team at Nulogy for a contract packaging and manufacturing platform.</p>
-						</div>
-					</div>
-					<div class="row align-items-center pl-5 pr-3 w-100">
-						<div class="col-2 text-right icon">
-							🔈
-						</div>
-						<div class="col-10">
-							<p class="mb-0">Prototyped and developed solutions to bring Manulife insurance benefits to Alexa.</p>
-						</div>
-					</div>
-					<div class="row align-items-center pl-5 pr-3 w-100">
-						<div class="col-2 text-right icon">
-							🎮
-						</div>
-						<div class="col-10">
-							<p class="mb-0">Automated video gaming and benchmarking procedures to analyze AMD graphics cards.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row align-items-start h-10">
-					<div class="row align-items-center text-center pl-5 pr-3 w-100">
-						<div class="col-12 text-center">
-							<p class="mb-0">For more details than just an emoji and a sentence: my resume and LinkedIn.</p>
-						</div>
+						<h3 class="pb-5">what i've done</h3>
+						<p class="pb-md-2">Developed backend software at Extend to send & receive virtually distributed corporate credit cards.</p>
+						<p class="pb-md-2">Managed a product feature to bring Splunk Mobile to devices running device management software.</p>
+						<p class="pb-md-2">Developed enhancements for the deployment of Apple Maps data around the world.</p>
+						<p class="pb-md-2">Developed on an XP team at Nulogy for a contract packaging & manufacturing platform.</p>
+						<p class="pb-md-2">Prototyped & developed solutions to bring Manulife insurance benefits to Alexa.</p>
+						<p class="pb-md-2">Automated video gaming & benchmarking procedures to analyze AMD graphics cards.</p>
+						<p class="pt-3 pt-md-5">For details beyond one sentence: my resume & LinkedIn.</p>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<section id="about" class="scroll-to">
-			<div class="container text-center h-100">
-				<div class="row align-items-end h-25">
-					<div class="col">
-						<h3>more about me</h3>
-					</div>
-				</div>
-				<div class="row align-items-start pt-5 h-75">
-					<div class="col">
-						<p>I'm currently in Waterloo, but I spent much of the last few years in the Bay Area and Toronto.</p>
+			<div class="container h-100">
+				<div class="row align-items-center h-100">
+					<div class="col pl-lg-5 pr-lg-5">
+						<h3 class="pb-5 text-center">more about me</h3>
+						<div class="row align-items-center">
+							<div class="col-2 col-sm-1 text-right">
+								<p class="icon">📍</p>
+							</div>
+							<div class="col-10 col-sm-11">
+								<p>Currently in Waterloo. Previously in the Bay Area & Toronto.</p>
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-2 col-sm-1 text-right icon">
+								<p class="icon">🎓</p>
+							</div>
+							<div class="col-10 col-sm-11">
+								<p>Graduating 2021. Systems Design Engineering (Options in Artificial Intelligence & Management Sciences). University of Waterloo.</p>
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-2 col-sm-1 text-right icon">
+								<p class="icon">🔬</p>
+							</div>
+							<div class="col-10 col-sm-11">
+								<p>Undergraduate Research Assistant (×2). Voice-user interfaces with Alexa. 3D mapping with unmanned aerial vehicles.</p>
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-2 col-sm-1 text-right icon">
+								<p class="icon">🏝️</p>
+							</div>
+							<div class="col-10 col-sm-11">
+								<p>Travelling. Road trips. Food. Hiking. Skiing. Civilization VI (& V).</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<section id="contact" class="scroll-to">
-			<div class="container text-center h-100">
-				<div class="row align-items-end h-25">
+			<div class="container h-100">
+				<div class="row align-items-center text-center h-100">
 					<div class="col">
-						<h3>let's chat</h3>
-					</div>
-				</div>
-				<div class="row align-items-start pt-5 h-75">
-					<div class="col">
-						<p>how to find me</p>
+						<h3 class="pb-5">let's connect</h3>
+						<div class="row align-items-center pt-5">
+							<div class="col pl-sm-5">
+								<button type="button" class="btn btn-light btn-circle">
+									<i class="fa fa-envelope"></i>
+								</button>
+								<p class="pt-2">hello</p>
+							</div>
+							<div class="col">
+								<button type="button" class="btn btn-light btn-circle" onclick="window.open('https://www.linkedin.com/in/ryanmok/');">
+									<i class="fa fa-linkedin"></i>
+								</button>
+								<p class="pt-2">ryanmok</p>
+							</div>
+							<div class ="col pr-sm-5">
+								<button type="button" class="btn btn-light btn-circle" onclick="window.open('https://github.com/ryan-mok');">
+									<i class="fa fa-github"></i>
+								</button>
+								<p class="pt-2">ryan-mok</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
