--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 				<div class="row align-items-center h-95">
 					<div class="col">
 						<h1>hello, i'm ryan</h1>
-						<h2 class="pt-5">Likes 👍: developing software, managing products.</h2>
-						<h2 class="pt-2">Loves ❤️: making amazing software products, together.</h2>
+						<h2 class="pt-5">Things I 👍: developing software, managing products.</h2>
+						<h2 class="pt-2">Things I ❤️: making amazing software products, together.</h2>
 					</div>
 				</div>
 				<div class="row align-items-end h-5">
@@ -135,19 +135,19 @@
 						<h3 class="pb-5">let's connect</h3>
 						<div class="row align-items-center pt-5">
 							<div class="col pl-sm-5">
-								<button type="button" class="btn btn-light btn-circle">
+								<button id = "email" type="button" class="btn btn-light btn-circle" data-toggle="tooltip" data-placement="top" title="Copy email to clipboard" onclick="copyEmail();">
 									<i class="fa fa-envelope"></i>
 								</button>
 								<p class="pt-2">hello</p>
 							</div>
 							<div class="col">
-								<button type="button" class="btn btn-light btn-circle" onclick="window.open('https://www.linkedin.com/in/ryanmok/');">
+								<button type="button" class="btn btn-light btn-circle" data-toggle="tooltip" data-placement="top" title="Open LinkedIn in a new tab" onclick="window.open('https://www.linkedin.com/in/ryanmok/');">
 									<i class="fa fa-linkedin"></i>
 								</button>
 								<p class="pt-2">ryanmok</p>
 							</div>
 							<div class ="col pr-sm-5">
-								<button type="button" class="btn btn-light btn-circle" onclick="window.open('https://github.com/ryan-mok');">
+								<button type="button" class="btn btn-light btn-circle" data-toggle="tooltip" data-placement="top" title="Open GitHub in a new tab" onclick="window.open('https://github.com/ryan-mok');">
 									<i class="fa fa-github"></i>
 								</button>
 								<p class="pt-2">ryan-mok</p>
@@ -164,7 +164,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-	<script src="main.js"></script>
+	<script src="scripts/main.js"></script>
+	<script src="scripts/contact.js"></script>
 </body>
 
 </html>
