Add loading animations

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 			<div class="container h-100 text-center">
 				<div class="row align-items-center h-95">
 					<div class="col">
-						<h1>hello, i'm ryan</h1>
-						<h2 class="pt-5">Things I 👍: developing software, managing products.</h2>
-						<h2 class="pt-2">Things I ❤️: making amazing software products, together.</h2>
+						<h1 id="hello">hello, i'm ryan</h1>
+						<h2 id="like" class="pt-5">Things I 👍: developing software, managing products.</h2>
+						<h2 id="love" class="pt-2">Things I ❤️: making amazing software products, together.</h2>
 					</div>
 				</div>
 				<div class="row align-items-end h-5">
