Clean up content, css

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 				<div class="row align-items-center text-center h-100">
 					<div class="col">
 						<h3 class="pb-5">what i've done</h3>
-						<p class="pb-md-2">Developed backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to send & receive virtually distributed corporate credit cards.</p>
+						<p class="pb-md-2">Currently developing backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage virtually distributed corporate credit cards.</p>
 						<p class="pb-md-2">Managed a product feature to bring <a class="text-info" href="https://www.splunk.com/" target="_blank" onclick="this.blur()">Splunk</a> Mobile to devices running device management software.</p>
 						<p class="pb-md-2">Developed enhancements for the deployment of <a class="text-info" href="https://www.apple.com/" target="_blank" onclick="this.blur()">Apple</a> Maps data around the world.</p>
 						<p class="pb-md-2">Developed on an XP team at <a class="text-info" href="https://nulogy.com/" target="_blank" onclick="this.blur()">Nulogy</a> for a contract packaging & manufacturing platform.</p>
 						<p class="pb-md-2">Prototyped & developed solutions to bring <a class="text-info" href="https://www.manulife.ca/" target="_blank" onclick="this.blur()">Manulife</a> insurance benefits to Alexa.</p>
 						<p class="pb-md-2">Automated video gaming & benchmarking procedures to analyze <a class="text-info" href="https://www.amd.com/" target="_blank" onclick="this.blur()">AMD</a> graphics cards.</p>
-						<p class="pt-3 pt-md-5">For more details beyond just one sentence: <a class="text-info" href="https://www.linkedin.com/in/ryanmok/" target="_blank" onclick="this.blur()">LinkedIn</a>.</p>
+						<p class="pt-3 pt-md-5">For more details beyond just one sentence: my <a class="text-info" href="https://www.linkedin.com/in/ryanmok/" target="_blank" onclick="this.blur()">LinkedIn</a>.</p>
 					</div>
 				</div>
 			</div>
@@ -105,7 +105,7 @@
 								<p class="icon">🎓</p>
 							</div>
 							<div class="col-10 col-sm-11">
-								<p>Graduating 2021. Systems Design Engineering (Options in Artificial Intelligence & Management Sciences). University of Waterloo.</p>
+								<p>Graduating 2021. <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a> (Options in Artificial Intelligence & Management Sciences). University of Waterloo.</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
