Add background images

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								<p class="icon">🎓</p>
 							</div>
 							<div class="col-10 col-sm-11">
-								<p>Graduating 2021. <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a> (Options in Artificial Intelligence & Management Sciences). University of Waterloo.</p>
+								<p>Graduating 2021. BASc in <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a> (Options in Artificial Intelligence & Management Sciences). University of Waterloo.</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
