--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="styles/content.css">
 	<link rel="stylesheet" href="styles/animations.css">
 	
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>Ryan Mok</title>
@@ -36,7 +36,7 @@
 	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="#home">ryan mok</a>
-			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navigation">
+			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navigation" onclick="this.blur()">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navigation">
@@ -78,13 +78,13 @@
 				<div class="row align-items-center text-center h-100">
 					<div class="col">
 						<h3 class="pb-5">what i've done</h3>
-						<p class="pb-md-2">Currently developing backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage virtually distributed corporate credit cards.</p>
+						<p class="pb-md-2">Currently developing backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage digitally distributed virtual credit cards.</p>
 						<p class="pb-md-2">Managed a product feature to bring <a class="text-info" href="https://www.splunk.com/" target="_blank" onclick="this.blur()">Splunk</a> Mobile to devices running device management software.</p>
 						<p class="pb-md-2">Developed enhancements for the deployment of <a class="text-info" href="https://www.apple.com/" target="_blank" onclick="this.blur()">Apple</a> Maps data around the world.</p>
 						<p class="pb-md-2">Developed on an XP team at <a class="text-info" href="https://nulogy.com/" target="_blank" onclick="this.blur()">Nulogy</a> for a contract packaging & manufacturing platform.</p>
 						<p class="pb-md-2">Prototyped & developed solutions to bring <a class="text-info" href="https://www.manulife.ca/" target="_blank" onclick="this.blur()">Manulife</a> insurance benefits to Alexa.</p>
 						<p class="pb-md-2">Automated video gaming & benchmarking procedures to analyze <a class="text-info" href="https://www.amd.com/" target="_blank" onclick="this.blur()">AMD</a> graphics cards.</p>
-						<p class="pt-3 pt-md-5">For more details beyond just one sentence: my <a class="text-info" href="https://www.linkedin.com/in/ryanmok/" target="_blank" onclick="this.blur()">LinkedIn</a>.</p>
+						<p class="pt-3 pt-md-5">For more details beyond 75 words: my <a class="text-info" href="https://www.linkedin.com/in/ryanmok/" target="_blank" onclick="this.blur()">LinkedIn</a>.</p>
 					</div>
 				</div>
 			</div>
@@ -108,7 +108,7 @@
 								<p class="icon">🎓</p>
 							</div>
 							<div class="col-10 col-sm-11">
-								<p>Graduating 2021. BASc in <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a> (Options in Artificial Intelligence & Management Sciences). University of Waterloo.</p>
+								<p>Graduating 2021. <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a>. University of Waterloo.</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
