--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js" integrity="sha256-Jvh9+A4HNbbWsWl1Dw7kAzNsU3y8elGIjLnUSUNMtLg=" crossorigin="anonymous"></script>
+
 	<meta name="description" content="Ryan Mok. Software Engineering Intern at Extend. Systems Design Engineering student at the University of Waterloo.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
