Update copy for Extend

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js" integrity="sha256-Jvh9+A4HNbbWsWl1Dw7kAzNsU3y8elGIjLnUSUNMtLg=" crossorigin="anonymous"></script>
 
-	<meta name="description" content="Ryan Mok. Software Engineering Intern at Extend. Systems Design Engineering student at the University of Waterloo.">
+	<meta name="description" content="Ryan Mok. Software development and product management. Systems Design Engineering student at the University of Waterloo.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -80,7 +80,7 @@
 				<div class="row align-items-center text-center h-100">
 					<div class="col">
 						<h3 class="pb-5">what i've done</h3>
-						<p class="pb-md-2">Currently developing backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage digitally distributed virtual credit cards.</p>
+						<p class="pb-md-2">Developed backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage digitally distributed virtual credit cards.</p>
 						<p class="pb-md-2">Managed a product feature to bring <a class="text-info" href="https://www.splunk.com/" target="_blank" onclick="this.blur()">Splunk</a> Mobile to devices running device management software.</p>
 						<p class="pb-md-2">Developed enhancements for the deployment of <a class="text-info" href="https://www.apple.com/" target="_blank" onclick="this.blur()">Apple</a> Maps data around the world.</p>
 						<p class="pb-md-2">Developed on an XP team at <a class="text-info" href="https://nulogy.com/" target="_blank" onclick="this.blur()">Nulogy</a> for a contract packaging & manufacturing platform.</p>
